--- a/client/src/app.css
+++ b/client/src/app.css
@@ -19,6 +19,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -26,7 +27,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -36,6 +36,10 @@ h1 {
   line-height: 1.1;
 }
 
+h4 {
+  margin-block: 0.5em;
+}
+
 .card {
   padding: 2em;
 }
@@ -43,7 +47,6 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -59,11 +62,13 @@ button {
   transition: border-color 0.25s;
   border-color: #747bff;
 }
-button:hover {
+
+button:hover:enabled {
   border-color: #747bff;
   background-color: #747bff;
   color: whitesmoke;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -74,9 +79,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
